Got Property Listing Optimiser working with postcodes

--- a/joe/Wigwamm-Property-Listing-Optimiser/client/Wigwamm-Property-Listing-Optimiser.html
+++ b/joe/Wigwamm-Property-Listing-Optimiser/client/Wigwamm-Property-Listing-Optimiser.html
@@ -17,7 +17,7 @@
     </div>
     <div>
       <input type='numer' id='outCode' required/>
-      <label for='outCode'>Out Code</label>
+      <label for='outCode'>Post Code</label>
     </div>
     <div>
       <input type='number' id='beds' required/>
